<resources >
    <string name="app_name">Mon calculatrice</string>
    <!--text opperande-->
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4" >4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <!--text opperateur-->
    <string name="multi">*</string>
    <string name="parantheses">( )</string>
    <string name="virgulle">.</string>
    <string name="puiss">^</string>
    <string name="plus">+</string>
    <string name="moins">-</string>
    <string name="div">÷</string>
    <string name="egal">=</string>
    <string name="ac">AC</string>
    <string name="delete">delete</string>
    <string name="saisir_votre_op_ration">saisir votre opération</string>
    <string name="sign">-/+</string>
</resources>